# c2

./: .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  go.mod  main.go  package.json  tsconfig.json
.github/workflows/: ci.yml
cmd/c2/: dependencies.go  main.go  version.go  version_test.go
cmd/c2cli/: main.go
internal/api/: client.go  client_test.go
internal/cli/: export.go  log.go  report.go  root.go  root_test.go  setup.go  status.go  sync.go  trend.go
internal/cmd/: auth.go  export.go  log.go  root.go  status.go  sync.go  trend.go
internal/commands/: auth.go  export.go  log.go  root.go  status.go  sync.go  trend.go
internal/config/: config.go  config_test.go  paths.go
internal/display/: display.go  display_test.go  format.go  format_test.go  tables.go  tables_test.go
internal/export/: csv.go  export_test.go  filter.go  json.go
internal/model/: pace.go  pace_test.go  workout.go  workout_test.go
internal/models/: models.go  models_test.go
internal/report/: html.go  html_test.go
internal/stats/: goals.go  goals_test.go  sessions.go  sessions_test.go  weekly.go  (+1 more)
src/: analysis.test.ts  analysis.ts  api.rs  cli.rs  cli.test.ts  config.rs  config.test.ts  config.ts  data.test.ts  data.ts  display.rs  display.test.ts  display.ts  doctor.ts  envelope.ts  export.test.ts  index.ts  main.rs  models.rs  models.test.ts  models.ts  notes.test.ts  notes.ts  paths.test.ts  paths.ts  sessions.test.ts  sessions.ts  stats.test.ts  stats.ts  storage.rs  storage.ts
testdata/: workouts.jsonl
(+47 files in other folders)
