[package]
name = "c2cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool for Concept2 Logbook data sync and analysis"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
oauth2 = "5"
